# lore

./: .gitignore  NEXT_SESSION_PLAN.md  README.md  THE_CODEX.md  demo.cast  demo.py  dwiki.yaml  pyproject.toml
.github/: CONTRIBUTING.md
.lore/: postmortems.jsonl  router_events.jsonl
docs/: FOUR_WEEK_EXECUTION_PLAN.md  HONEST_COMPETITIVE_COMPARISON.md  LORE_AUDIT_SOURCE_PACK.md  LORE_NEXT_BUILD.md  LORE_PRODUCT_DECISIONS_2026-04-06.md  OPERATOR_WORKFLOW.md  PRIVATE_BUILD_PLAN.md  PUBLIC_LAUNCH_CHECKLIST.md  RELEASE_CHECKLIST.md  codex.html  index.html
hooks/: lore_precompact.py  lore_pretooluse.py
lore/: __init__.py  archetypes.py  audit.py  briefing.py  circuit_breaker.py  claude_code.py  cli.py  config.py  dispatch.py  distill.py  dlq.py  eval_loop.py  evolution.py  evolve.py  fleet.py  maintenance.py  memory.py  monitor.py  notebook.py  observability.py  packs.py  postmortem.py  preamble.py  proposals.py  publisher.py  rejection_tracker.py  router_learner.py  routing.py  runtime.py  scaffold.py  search.py  server.py  teaching.py
lore_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
raw/: 2026-04-05-alchemist-prompt-routing-proposal.md  2026-04-05-architect-system-design-proposal.md  2026-04-05-cartographer-knowledge-graph-proposal.md  2026-04-05-librarian-retrieval-proposal.md  2026-04-05-scout-discovery-proposal.md  2026-04-05-sentinel-observability-proposal.md  2026-04-05-timekeeper-scheduling-proposal.md  2026-04-06-deployment-patterns-production-ai-agents.md  2026-04-06-lore-$1m-arr-path-—-notebooklm-+-gemini-synthesis-2026-04-06.md  2026-04-06-lore-audit-feature-—-codex-build-2026-04-06.md  (+12 more)
scripts/: daemon_ctl.py  (+5 more)
(+158 files in other folders)
