[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-mcp"
version = "0.1.0"
description = "LORE — Living Operational Research Engine. The Codex of AI agent patterns, exposed as an MCP server."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
lore-mcp = "lore.server:main"
