[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lore-agents"
version = "1.0.0"
description = "The AI Agent Codex — 15 production patterns, scaffolds for LangGraph/CrewAI/OpenAI Agents SDK, and a searchable knowledge base"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
keywords = ["ai-agents", "patterns", "scaffold", "langgraph", "crewai", "openai", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
authors = [
    {name = "Miles"},
]

[project.urls]
Homepage = "https://github.com/Miles0sage/lore"
Documentation = "https://miles0sage.github.io/lore/"
Repository = "https://github.com/Miles0sage/lore"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
lore = "lore.cli:main"

[project.entry-points."mcp.servers"]
lore = "lore.server:main"

[tool.setuptools.packages.find]
include = ["lore*"]

[tool.setuptools.package-data]
lore = ["../wiki/*.md", "../THE_CODEX.md"]
